@@ -1,1 +1,0 @@
-MD5 58cfb900d0e56193da2ab8e50b94082c sip-3.2.1.tar.gz 372399
