@@ -1,0 +1,1 @@
+MD5 06a9ad914259c595ad0f0a9990a20aca sip-3.2.4.tar.gz 372965
