@@ -1,7 +1,6 @@
 # Copyright 1999-2002 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# Maintainer: Bart Verwilst <verwilst@gentoo.org>
-# $Header: /var/cvsroot/gentoo-x86/dev-python/sip/Attic/sip-3.2.1.ebuild,v 1.1 2002/05/05 17:18:11 verwilst Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/sip/Attic/sip-3.2.4.ebuild,v 1.1 2002/07/05 00:10:44 verwilst Exp $
 
 
 S=${WORKDIR}/${P}
@@ -14,8 +13,8 @@ DEPEND="virtual/glibc
 	>=dev-lang/python-2.2"
 
 src_compile(){
-	
-	./configure --prefix=/usr || die
+
+	./configure --prefix=/usr --host=${CHOST} || die
 	emake || die
 
 }
