@@ -1,6 +1,8 @@
 # ChangeLog for dev-python/sip
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-python/sip/ChangeLog,v 1.2 2002/05/05 17:18:11 verwilst Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/sip/ChangeLog,v 1.3 2002/07/05 00:10:44 verwilst Exp $
+
+*sip-3.2.4 (5 July 2002) Bart Verwilst <verwilst@gentoo.org>
 
 *sip-3.2.1 (5 May 2002)
 
